# monotone-framework

./: ChangeLog.md  Lattice.hs  monotone-framework.cabal
execs/: FunToDot.hs
src/: Analysis.hs  Array.hs  CFG.hs  SSA.hs  SemiLattice.hs  Utils.hs
src/CFA/: Lambda.hs  ZeroCFA.hs
src/TIP/: Analysis.hs  Examples.hs  Syntax.hs
src/TIP/Analysis/: AvailableExpr.hs  ConstProp.hs  IntervalCorrect.hs  IntervalWrong.hs  Liveness.hs  Sign.hs  Utils.hs  VeryBusyExpr.hs
