name:                monotone-framework
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Ömer Sinan Ağacan
maintainer:          omeragacan@gmail.com
-- copyright:
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:
    Analysis,
    CFG,
    SemiLattice,
    TIP.Analysis.AvailableExpr,
    TIP.Analysis.ConstProp,
    TIP.Analysis.IntervalWrong,
    TIP.Analysis.Liveness,
    TIP.Analysis.Sign,
    TIP.Analysis.Utils,
    TIP.Analysis.VeryBusyExpr,
    TIP.Examples,
    TIP.Syntax,
    Utils

  -- other-modules:
  build-depends:
    array           >=0.5 && <0.6,
    base            >=4.9 && <4.10,
    containers      >=0.5 && <0.6,
    mtl             >=2.2 && <2.3

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
